force/src/objects/Network_Recruitment__c.object
<CustomObject>
    <description>Custom object to track network recruiting activity.</description>
    <fields>
        <fullName>Account_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Network Recruitments</relationshipLabel>
        <relationshipName>Network_Recruitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Office_Locations__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Office Locations</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Structure__c</fullName>
        <label>Business Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Prop</fullName>
                </value>
                <value>
                    <fullName>S-Corp</fullName>
                </value>
                <value>
                    <fullName>Prof. Corp</fullName>
                </value>
                <value>
                    <fullName>PLLC</fullName>
                </value>
                <value>
                    <fullName>General Partnership (LLP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAQH_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CAQH_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CAQH ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalOptima_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CalOptima Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Physical City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <label>Client Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Existing Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Role</label>
        <referenceTo>Contact_Role__c</referenceTo>
        <relationshipLabel>Network Recruitments</relationshipLabel>
        <relationshipName>Network_Recruitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contacts_Dispensed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contact Lenses are dispensed at this office</inlineHelpText>
        <label>Contacts Dispensed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credentialing_Contact_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credentialing Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Credentialing_Contact_Fax__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credentialing Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Credentialing_Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credentialing Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credentialing_Contact_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credentialing Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>Closed_Date__c - Opened_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Degree</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispensary_Ownership_Percentage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Percentage of the dispensary the provider owns</inlineHelpText>
        <label>Dispensary Ownership Percentage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_NDA_Criteria_Forms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Send NDA/Criteria Forms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doctor_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Doctor ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Member_Type__c</fullName>
        <label>Doctor Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>M - Member Doctor</fullName>
                </value>
                <value>
                    <fullName>S - School Faculty Doctor</fullName>
                </value>
                <value>
                    <fullName>F - Laser Vision Correction</fullName>
                </value>
                <value>
                    <fullName>A - Affiliate</fullName>
                </value>
                <value>
                    <fullName>X - Special (GAP) Doctor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employed_at_Other_Locations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the provider employed at any other locations?</description>
        <label>Employed at Other Locations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Committee_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Committee Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fax</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographical_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geographical City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographical_County__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geographical County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographical_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Geographical Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geographical_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geographical State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographical_Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geographical Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographical_ZIP_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geographical ZIP Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <description>Number of Hours per week provider works at this location.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Hours Worked</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_Todays_Report__c</fullName>
        <formula>IF( Number_of_working_days_between_2_dates__c == 2, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include in Todays Report?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVC_Surgeon_NDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LVC Surgeon NDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Business_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Business Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meets_Insurance_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provider has professional liability insurance of at least $1 million per occurrence / $3 million aggregate</description>
        <label>Meets Insurance Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meets_Medicare_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The provider is enrolled with Medicare or has started the enrollment process</description>
        <label>Meets Medicare Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NPI</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Frames_Displayed_in_Dispensary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Number of frames on display in dispensary</inlineHelpText>
        <label>Number of Frames Displayed in Dispensary</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations_Owned__c</fullName>
        <description>Number of locations provider owns</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Number of Locations Owned</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Members_Covered__c</fullName>
        <label>Number of Members Covered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_working_days_between_2_dates__c</fullName>
        <formula>IF( Closed_Date__c  &lt;&gt;   TODAY() ,
	IF(	/** Condition */
		AND(
			(5 - (CASE(MOD( Closed_Date__c   - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD(  TODAY()  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ),
			((( TODAY()  -   Closed_Date__c   ) + 1) &lt; 7)
		),
		/** Value to YES */
		(
			(CASE(MOD(  TODAY()  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD(  Closed_Date__c    - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))
		),
		/** Value to NOT */
		(	
			((FLOOR((( TODAY()  -  Closed_Date__c   ) - (CASE(MOD(  Closed_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) +
			(CASE(MOD(  Closed_Date__c    - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) +
			(CASE(MOD(  TODAY()  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0))
		)
	)
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of working days between 2 dates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opened_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Employee__c</fullName>
        <label>Owner/Employee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_County__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Physical County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Ownership_Percentage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Percentage of practice the provider owns</inlineHelpText>
        <label>Practice Ownership Percentage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Recruitment_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Private Recruitment Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to Contact from Network Recruitment object. To be populated by trigger.</description>
        <label>Provider Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Network Recruitments</relationshipLabel>
        <relationshipName>Network_Recruitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Not_Participating__c</fullName>
        <label>Reason for Not Participating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABO/TPA</fullName>
                </value>
                <value>
                    <fullName>Ownership</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>No Dispensary</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Doesn’t Provide Routine Exams</fullName>
                </value>
                <value>
                    <fullName>Not Managed Care/VSP Friendly</fullName>
                </value>
                <value>
                    <fullName>Non-responsive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruiting_Network__c</fullName>
        <label>Recruiting Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VSP</fullName>
                </value>
                <value>
                    <fullName>Choice</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>Advantage</fullName>
                </value>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>LVC</fullName>
                </value>
                <value>
                    <fullName>Protec</fullName>
                </value>
                <value>
                    <fullName>MCD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruitment_Status__c</fullName>
        <inlineHelpText>&quot;Episoded/Rostered&quot; Recruitment Status indicates the practice meets VSP requirements and the application is in process.</inlineHelpText>
        <label>Recruitment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Lead</fullName>
                </value>
                <value>
                    <fullName>Office Contacted</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Episoded/Rostered</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed/Committee</fullName>
                </value>
                <value>
                    <fullName>Completed/No Committee</fullName>
                </value>
                <value>
                    <fullName>Completed/Denied at Committee</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruitment_Type__c</fullName>
        <label>Recruitment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Doctor Initiated</fullName>
                </value>
                <value>
                    <fullName>GAP</fullName>
                </value>
                <value>
                    <fullName>Proactive</fullName>
                </value>
                <value>
                    <fullName>Pro-Supplemental</fullName>
                </value>
                <value>
                    <fullName>Reactive</fullName>
                </value>
                <value>
                    <fullName>Reactive Supplemental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruitment_in_Progress_Count__c</fullName>
        <formula>IF(
ISPICKVAL( Recruitment_Status__c , &quot;Completed&quot;)  || 
ISPICKVAL( Recruitment_Status__c , &quot;Completed/Denied at Committee&quot;) ||
ISPICKVAL( Recruitment_Status__c , &quot;Closed&quot;),
0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recruitment in Progress Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requestor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requestor Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>School_Associate_Doctor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>School Associate Doctor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CVO Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Physical State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Change_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Physical Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Recruitment_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Recruitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Client_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Client Name?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Works_at_10_or_more_VSP_Locations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Works at more than 10 VSP Locations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Physical Zip Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Network Recruitment</label>
    <listViews>
        <fullName>My_Closed_Recruitments</fullName>
        <columns>NAME</columns>
        <columns>Provider_Name_Lookup__c</columns>
        <columns>Account_Name_Lookup__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ZIP__c</columns>
        <columns>Estimated_Committee_Date__c</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Recruitment_Status__c</field>
            <operation>notEqual</operation>
            <value>New Lead,Office Contacted,In Process,Episoded/Rostered,Pending</value>
        </filters>
        <label>My Closed Recruitments</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Recruitments</fullName>
        <columns>NAME</columns>
        <columns>Provider_Name_Lookup__c</columns>
        <columns>Account_Name_Lookup__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ZIP__c</columns>
        <columns>Estimated_Committee_Date__c</columns>
        <columns>Days_Open__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Recruitment_Status__c</field>
            <operation>equals</operation>
            <value>New Lead,Office Contacted,In Process,Episoded/Rostered,Pending</value>
        </filters>
        <label>My Open Recruitments</label>
    </listViews>
    <listViews>
        <fullName>New_Become_a_VSP_Provider_Requests</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Provider_Name_Lookup__c</columns>
        <columns>Account_Name_Lookup__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ZIP__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Recruitment_Status__c</columns>
        <columns>Recruitment_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>dadmi</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>kboot</value>
        </filters>
        <filters>
            <field>Recruitment_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>New Become a VSP Provider Requests</label>
    </listViews>
    <listViews>
        <fullName>Region_10_Yesterday_s_Completed_Recrui</fullName>
        <columns>NAME</columns>
        <columns>Provider_Name_Lookup__c</columns>
        <columns>Account_Name_Lookup__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ZIP__c</columns>
        <columns>Estimated_Committee_Date__c</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recruitment_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>WV,VA,NC,SC,ME,NH,MA,RI,VT</value>
        </filters>
        <label>Region 10 - Yesterday&apos;s Completed Recrui</label>
    </listViews>
    <listViews>
        <fullName>Region_1_Yesterday_s_Completed_Recruit</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Provider_Name_Lookup__c</columns>
        <columns>Account_Name_Lookup__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ZIP__c</columns>
        <columns>Estimated_Committee_Date__c</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recruitment_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>AK,HI</value>
        </filters>
        <filters>
            <field>ZIP__c</field>
            <operation>startsWith</operation>
            <value>90,91,92</value>
        </filters>
        <label>Region 1 - Yesterday&apos;s Completed Recruit</label>
    </listViews>
    <listViews>
        <fullName>Region_2_Yesterday_s_Completed_Recruit</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Provider_Name_Lookup__c</columns>
        <columns>Account_Name_Lookup__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ZIP__c</columns>
        <columns>Estimated_Committee_Date__c</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recruitment_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>WA</value>
        </filters>
        <filters>
            <field>ZIP__c</field>
            <operation>startsWith</operation>
            <value>93,94,95,96</value>
        </filters>
        <label>Region 2 - Yesterday&apos;s Completed Recruit</label>
    </listViews>
    <listViews>
        <fullName>Region_3_Yesterday_s_Completed_Recruit</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Provider_Name_Lookup__c</columns>
        <columns>Account_Name_Lookup__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ZIP__c</columns>
        <columns>Estimated_Committee_Date__c</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recruitment_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>OR,NV,ID,UT,AZ,MT,WY,CO,ND,SD,NE</value>
        </filters>
        <label>Region 3 - Yesterday&apos;s Completed Recruit</label>
    </listViews>
    <listViews>
        <fullName>Region_4_Yesterday_s_Completed_Recruit</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Provider_Name_Lookup__c</columns>
        <columns>Account_Name_Lookup__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ZIP__c</columns>
        <columns>Estimated_Committee_Date__c</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recruitment_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NM,TX,OK,WI</value>
        </filters>
        <label>Region 4 - Yesterday&apos;s Completed Recruit</label>
    </listViews>
    <listViews>
        <fullName>Region_5_Yesterday_s_Completed_Recruit</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Provider_Name_Lookup__c</columns>
        <columns>Account_Name_Lookup__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ZIP__c</columns>
        <columns>Estimated_Committee_Date__c</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recruitment_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>KS,MN,IA,MO,AR,LA,MS,AL</value>
        </filters>
        <label>Region 5 - Yesterday&apos;s Completed Recruit</label>
    </listViews>
    <listViews>
        <fullName>Region_6_Yesterday_s_Completed_Recruit</fullName>
        <columns>NAME</columns>
        <columns>Provider_Name_Lookup__c</columns>
        <columns>Account_Name_Lookup__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ZIP__c</columns>
        <columns>Estimated_Committee_Date__c</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recruitment_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>IL,PA,MD,CT</value>
        </filters>
        <label>Region 6 - Yesterday&apos;s Completed Recruit</label>
    </listViews>
    <listViews>
        <fullName>Region_7_Yesterday_s_Completed_Recruit</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Provider_Name_Lookup__c</columns>
        <columns>Account_Name_Lookup__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ZIP__c</columns>
        <columns>Estimated_Committee_Date__c</columns>
        <columns>Closed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recruitment_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>TN,GA,FL,DE,DC,PR,VI</value>
        </filters>
        <label>Region 7 - Yesterday&apos;s Completed Recruit</label>
    </listViews>
</CustomObject>